manifests/insurance-claims-workshop/username-distribution/service-username-distribution.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"redis"}]'
  labels:
    app: username-distribution
    app.kubernetes.io/component: username-distribution
    app.kubernetes.io/instance: username-distribution
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: username-distribution-app
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: latest
  name: username-distribution
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: username-distribution
    deploymentconfig: username-distribution
  sessionAffinity: None
  type: ClusterIP
